--- a/work_bbjh.html
+++ b/work_bbjh.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/src/style/index.css" />
     <link rel="stylesheet" href="/src/style/font.css" />
     <link rel="stylesheet" href="/src/style/sp_header.css" />
+    <link rel="stylesheet" href="/src/style/work_bbjh.css" />
     <title>🐴막시무스...나 너무 추워...</title>
   </head>
   <body>
@@ -26,11 +27,31 @@
       <main>
         <div class="bbjh_content">
           <div class="bbjh_image_box">
-            <div class="bbjh_object"></div>
+            <div class="bbjh_horse">
+              <img src="/src/img_src/bbjh/bbjh_horse.png" alt="bbjh horse" />
+            </div>
+            <div class="bbjh_char1">
+              <img src="/src/img_src/bbjh/ubin.png" alt="bbjh char1" />
+            </div>
+            <div class="bbjh_char2">
+              <img src="/src/img_src/bbjh/yeju.png" alt="bbjh char2" />
+            </div>
+            <div class="bbjh_char3">
+              <img src="/src/img_src/bbjh/hyeonwall.png" alt="bbjh char3" />
+            </div>
+            <div class="bbjh_char4">
+              <img src="/src/img_src/bbjh/jinha.png" alt="bbjh char4" />
+            </div>
           </div>
         </div>
       </main>
     </div>
+    <div class="bbjh_full_image_box">
+      <div class="bbjh_full_image">
+        <img src="/src/img_src/bbjh/bbjh_fullshot.png" alt="bbjh full image" />
+      </div>
+    </div>
     <script type="module" src="/dist/navigation.js"></script>
+    <script type="module" src="/dist/work_bbjh.js"></script>
   </body>
 </html>
