--- a/credit.html
+++ b/credit.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/src/style/index.css" />
     <link rel="stylesheet" href="/src/style/font.css" />
     <link rel="stylesheet" href="/src/style/sp_header.css" />
+    <link rel="stylesheet" href="/src/style/sp_credit.css" />
     <title>2026 서미커 신년 합작</title>
   </head>
   <body>
@@ -23,9 +24,13 @@
         </nav>
       </header>
 
-      <div class="credit_content">
-        <h1>CREDIT 페이지</h1>
-      </div>
+      <main>
+        <div class="credit_content">
+          <div class="credit_img_box">
+            <img src="/src/img_src/credit_info.png" alt="credit image" />
+          </div>
+        </div>
+      </main>
     </div>
     <script type="module" src="/dist/navigation.js"></script>
   </body>
