--- a/form.html
+++ b/form.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style/index.css" />
-    <link rel="stylesheet" href="/src/style/font.css" />
-    <link rel="stylesheet" href="/src/style/sp_header.css" />
-    <link rel="stylesheet" href="/src/style/sp_page_transition.css" />
-    <link rel="stylesheet" href="/src/style/sp_form.css" />
+    <link rel="stylesheet" href="./src/style/index.css" />
+    <link rel="stylesheet" href="./src/style/font.css" />
+    <link rel="stylesheet" href="./src/style/sp_header.css" />
+    <link rel="stylesheet" href="./src/style/sp_page_transition.css" />
+    <link rel="stylesheet" href="./src/style/sp_form.css" />
     <title>2026 서미커 신년 합작</title>
   </head>
   <body>
@@ -90,7 +90,7 @@
         </div>
       </main>
     </div>
-    <script type="module" src="/dist/navigation.js"></script>
-    <script type="module" src="/dist/form_stamp.js"></script>
+    <script type="module" src="./dist/navigation.js"></script>
+    <script type="module" src="./dist/form_stamp.js"></script>
   </body>
 </html>
