--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style/index.css" />
-    <link rel="stylesheet" href="/src/style/font.css" />
-    <link rel="stylesheet" href="/src/style/sp_main.css" />
-    <link rel="stylesheet" href="/src/style/sp_page_transition.css" />
+    <link rel="stylesheet" href="./src/style/index.css" />
+    <link rel="stylesheet" href="./src/style/font.css" />
+    <link rel="stylesheet" href="./src/style/sp_main.css" />
+    <link rel="stylesheet" href="./src/style/sp_page_transition.css" />
     <title>2026 서미커 신년 합작</title>
   </head>
 
@@ -34,6 +34,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/dist/navigation.js"></script>
+    <script type="module" src="./dist/navigation.js"></script>
   </body>
 </html>
