--- a/work_page/work.html
+++ b/work_page/work.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style/index.css" />
-    <link rel="stylesheet" href="/src/style/font.css" />
-    <link rel="stylesheet" href="/src/style/sp_header.css" />
-    <link rel="stylesheet" href="/src/style/sp_work.css" />
-    <link rel="stylesheet" href="/src/style/sp_page_transition.css" />
+    <link rel="stylesheet" href="../src/style/index.css" />
+    <link rel="stylesheet" href="../src/style/font.css" />
+    <link rel="stylesheet" href="../src/style/sp_header.css" />
+    <link rel="stylesheet" href="../src/style/sp_work.css" />
+    <link rel="stylesheet" href="../src/style/sp_page_transition.css" />
 
     <title>2026 서미커 신년 합작</title>
   </head>
@@ -110,7 +110,7 @@
         </main>
       </div>
     </div>
-    <script type="module" src="/dist/navigation.js"></script>
-    <script type="module" src="/dist/work_sign.js"></script>
+    <script type="module" src="../dist/navigation.js"></script>
+    <script type="module" src="../dist/work_sign.js"></script>
   </body>
 </html>
