--- a/work_page/work_bbjh.html
+++ b/work_page/work_bbjh.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style/index.css" />
-    <link rel="stylesheet" href="/src/style/font.css" />
-    <link rel="stylesheet" href="/src/style/sp_header.css" />
-    <link rel="stylesheet" href="/src/style/work_bbjh.css" />
+    <link rel="stylesheet" href="../src/style/index.css" />
+    <link rel="stylesheet" href="../src/style/font.css" />
+    <link rel="stylesheet" href="../src/style/sp_header.css" />
+    <link rel="stylesheet" href="../src/style/work_bbjh.css" />
     <title>🐴막시무스...나 너무 추워...</title>
   </head>
   <body>
@@ -51,7 +51,7 @@
         <img src="/src/img_src/bbjh/bbjh_fullshot.png" alt="bbjh full image" />
       </div>
     </div>
-    <script type="module" src="/dist/navigation.js"></script>
-    <script type="module" src="/dist/work_bbjh.js"></script>
+    <script type="module" src="../dist/navigation.js"></script>
+    <script type="module" src="../dist/work_bbjh.js"></script>
   </body>
 </html>
