--- a/credit.html
+++ b/credit.html
@@ -30,7 +30,7 @@
       <main>
         <div class="credit_content">
           <div class="credit_img_box">
-            <img src="/src/img_src/credit_info.png" alt="credit image" />
+            <img src="src/img_src/credit_info.png" alt="credit image" />
           </div>
         </div>
       </main>
