--- a/work_page/work.html
+++ b/work_page/work.html
@@ -34,12 +34,12 @@
             <!-- 배경 이미지들 -->
             <div class="work_background">
               <img
-                src="/src/img_src/work/mt_basic.png"
+                src="src/img_src/work/mt_basic.png"
                 alt="mountain"
                 class="bg_mountain"
               />
               <img
-                src="/src/img_src/work/is_basic.png"
+                src="src/img_src/work/is_basic.png"
                 alt="island"
                 class="bg_island"
               />
@@ -48,29 +48,29 @@
             <!-- 정보 팝업들 -->
             <div class="work_info_popup info_mountain">
               <img
-                src="/src/img_src/work/mountain_info.png"
+                src="src/img_src/work/mountain_info.png"
                 alt="mountain info"
               />
               <div class="work_info_btns">
                 <div class="info_mt_ok_btn">
-                  <img src="/src/img_src/work/check.png" alt="OK" />
+                  <img src="src/img_src/work/check.png" alt="OK" />
                   <span>OK</span>
                 </div>
                 <div class="work_back_btn">
-                  <img src="/src/img_src/work/return.png" alt="back arrow" />
+                  <img src="src/img_src/work/return.png" alt="back arrow" />
                   <span> BACK </span>
                 </div>
               </div>
             </div>
             <div class="work_info_popup info_island">
-              <img src="/src/img_src/work/island_info.png" alt="island info" />
+              <img src="src/img_src/work/island_info.png" alt="island info" />
               <div class="work_info_btns">
                 <div class="info_is_ok_btn">
-                  <img src="/src/img_src/work/check.png" alt="OK" />
+                  <img src="src/img_src/work/check.png" alt="OK" />
                   <span>OK</span>
                 </div>
                 <div class="work_back_btn">
-                  <img src="/src/img_src/work/return.png" alt="back arrow" />
+                  <img src="src/img_src/work/return.png" alt="back arrow" />
                   <span> BACK </span>
                 </div>
               </div>
@@ -79,29 +79,29 @@
             <!-- 표지판 -->
             <div class="work_signpost">
               <div class="signpost_rod">
-                <img src="/src/img_src/work/sign_rod.png" alt="signpost rod" />
+                <img src="src/img_src/work/sign_rod.png" alt="signpost rod" />
               </div>
 
               <div class="signpost_sign signpost_mt" id="sign-mt">
                 <img
-                  src="/src/img_src/work/sign_mt_basic.png"
+                  src="src/img_src/work/sign_mt_basic.png"
                   alt="MT sign"
                   class="sign_basic"
                 />
                 <img
-                  src="/src/img_src/work/sign_mt_select_hover.png"
+                  src="src/img_src/work/sign_mt_select_hover.png"
                   alt="MT sign hover"
                   class="sign_hover"
                 />
               </div>
               <div class="signpost_sign signpost_is" id="sign-is">
                 <img
-                  src="/src/img_src/work/sign_is_basic.png"
+                  src="src/img_src/work/sign_is_basic.png"
                   alt="IS sign"
                   class="sign_basic"
                 />
                 <img
-                  src="/src/img_src/work/sign_is_select_hover.png"
+                  src="src/img_src/work/sign_is_select_hover.png"
                   alt="IS sign hover"
                   class="sign_hover"
                 />
