--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@
         </div>
 
         <!-- 팝업들 -->
-        <div class="form_popup form_popup_mt">
+        <!-- <div class="form_popup form_popup_mt">
           <div class="popup_content">
             <img src="src/img_src/form/popup/popup_mt.png" alt="MT popup" />
             <button class="popup_close">✕</button>
@@ -86,6 +86,25 @@
         <div class="form_popup form_popup_is">
           <div class="popup_content">
             <img src="src/img_src/form/popup/popup_is.png" alt="IS popup" />
+            <button class="popup_close">✕</button>
+          </div>
+        </div> -->
+        <div class="form_popup form_popup_mt">
+          <div class="popup_content">
+            <div class="popup_wip">
+              <p class="wip_text">🚧 작업중입니다 🚧</p>
+              <p class="wip_subtext">조금만 기다려주세요!</p>
+            </div>
+            <button class="popup_close">✕</button>
+          </div>
+        </div>
+
+        <div class="form_popup form_popup_is">
+          <div class="popup_content">
+            <div class="popup_wip">
+              <p class="wip_text">🚧 작업중입니다 🚧</p>
+              <p class="wip_subtext">조금만 기다려주세요!</p>
+            </div>
             <button class="popup_close">✕</button>
           </div>
         </div>
